Implement adding teams

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
         {% for group in groups %}
         <div><h2>Group {{ group }}</h2></div>
         {% for team in groups[group] %}
-        <div><p>{{ team.name }} {{ team.registration_date }}</p></div>
+        <div><p>{{ team }}</p></div>
         {% endfor %}
         {% endfor %}
         <h1>Submit Teams</h1>
