--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,16 +20,27 @@
         <div><p>{{ team }}</p></div>
         {% endfor %}
         {% endfor %}
-        <h1>Submit Teams</h1>
+        <h2>Submit Teams</h2>
         <form action="" method="post">
-            {{ form.hidden_tag() }}
+            {{ teams_form.hidden_tag() }}
             <p>
-                {{ form.teams(cols=32, rows=4) }}<br>
-                {% for error in form.teams.errors %}
+                {{ teams_form.teams(cols=32, rows=4) }}<br>
+                {% for error in teams_form.teams.errors %}
                 <span style="color: red;">[{{ error }}]</span>
                 {% endfor %}
             </p>
-            <p>{{ form.submit() }}</p>
+            <p>{{ teams_form.submit() }}</p>
+        </form>
+        <h2>Submit Matches</h2>
+        <form action="" method="post">
+            {{ matches_form.hidden_tag() }}
+            <p>
+                {{ matches_form.matches(cols=32, rows=4) }}<br>
+                {% for error in matches_form.matches.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+                {% endfor %}
+            </p>
+            <p>{{ matches_form.submit() }}</p>
         </form>
     </body>
 </html>
