--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,22 +14,22 @@
         {% endif %}
         {% endwith %}
         <h1>Rankings</h1>
-        {% for group in groups %}
+        {% for group in teams %}
         <div><h2>Group {{ group }}</h2></div>
-        {% for team in groups[group] %}
-        <div><p>{{ team.name }} {{ team.registration_date }}</p></div>
+        {% for team in teams[group] %}
+        <div><p>{{ team.name }} {{ team.reg_date }}</p></div>
         {% endfor %}
         {% endfor %}
         <h1>Submit Teams</h1>
         <form action="" method="post">
-            {{ form.hidden_tag() }}
+            {{ teams_form.hidden_tag() }}
             <p>
-                {{ form.teams(cols=32, rows=4) }}<br>
-                {% for error in form.teams.errors %}
+                {{ teams_form.teams(cols=32, rows=4) }}<br>
+                {% for error in teams_form.teams.errors %}
                 <span style="color: red;">[{{ error }}]</span>
                 {% endfor %}
             </p>
-            <p>{{ form.submit() }}</p>
+            <p>{{ teams_form.submit() }}</p>
         </form>
     </body>
 </html>
