--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
         {% for group in teams %}
         <div><h2>Group {{ group }}</h2></div>
         {% for team in teams[group] %}
-        <div><p>{{ team.name }} {{ team.reg_date }}</p></div>
+        <div><p>{{ team }}</p></div>
         {% endfor %}
         {% endfor %}
         <h2>Submit Teams</h2>
