--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,6 +22,9 @@
         </div>
         {% endfor %}
         {% endfor %}
+        <form action="{{ url_for('clear') }}" method="post">
+            <input class="danger" type="submit" value="Clear All Data" onclick="return confirm('Are you sure?');">
+        </form>
         <h2>Submit Teams</h2>
         <form action="" method="post">
             {{ teams_form.hidden_tag() }}
