--- a/app/templates/teams.html
+++ b/app/templates/teams.html
@@ -4,6 +4,7 @@
     <h2>Add Teams</h2>
     <form action="" method="post">
         {{ teams_form.hidden_tag() }}
+        <p>Team name must not contain whitespace</p>
         <p>
             {{ teams_form.teams(cols=32, rows=4) }}<br>
             {% for error in teams_form.teams.errors %}
