--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,10 +23,10 @@
                         <a class="nav-link" aria-current="page" href="{{ url_for('index') }}">Scoreboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{{ url_for('teams') }}">Teams</a>
+                        <a class="nav-link" aria-current="page" href="{{ url_for('add_teams') }}">Add Teams</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{{ url_for('matches') }}">Matches</a>
+                        <a class="nav-link" aria-current="page" href="{{ url_for('add_matches') }}">Add Matches</a>
                     </li>
                     </ul>
                 </div>
