--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,6 +28,9 @@
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="{{ url_for('add_matches') }}">Add Matches</a>
                     </li>
+                    <li class="nav-item"></li>
+                        <a class="nav-link" aria-current="page" href="{{ url_for('team_details') }}">Team Details</a>
+                    </li>
                     </ul>
                 </div>
             </div>
