--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,6 +31,9 @@
                     <li class="nav-item"></li>
                         <a class="nav-link" aria-current="page" href="{{ url_for('team_details') }}">Team Details</a>
                     </li>
+                    <li class="nav-item"></li>
+                        <a class="nav-link" aria-current="page" href="{{ url_for('edit_teams') }}">Edit Teams</a>
+                    </li>
                     </ul>
                 </div>
             </div>
