Add functionality for editing matches

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
     <div><h2>Group {{ group }}</h2></div>
     {% for i in range(groups[group]|length) %}
     <div>
-        <p>{{ groups[group][i] }} {% if i < 4 %} <b>Qualifiying</b> {% endif %}</p>
+        <p>{{ groups[group][i] }} {% if i < 4 %} <b>Qualifying</b> {% endif %}</p>
     </div>
     {% endfor %}
     {% endfor %}
