--- a/app/templates/edit_matches.html
+++ b/app/templates/edit_matches.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Edit matches</h2>
-    <p>Refer to list of matches below for match number</p>
+    <h2>Edit Matches</h2>
     <form action="" method="post">
         {{ edit_matches_form.hidden_tag() }}
         <p>Syntax: &lt;match number&gt; &lt;New Team A&gt; &lt;New Team B&gt; &lt;Team A goals scored&gt; &lt;Team B goals scored&gt;</p>
+        <p>Refer to list of matches below for match number</p>
         <p>
             {{ edit_matches_form.matches(cols=32, rows=4) }}<br>
             {% for error in edit_matches_form.matches.errors %}
